[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Layout.gd" type="Script" id=1]
[ext_resource path="res://Materials/break.png" type="Texture" id=2]
[ext_resource path="res://Materials/gas.png" type="Texture" id=3]

[node name="Layout" type="Control"]
anchor_left = -0.5
anchor_top = -0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GAS" type="TextureRect" parent="."]
margin_left = 350.0
margin_top = 150.0
margin_right = 539.0
margin_bottom = 339.0
rect_scale = Vector2( 0.714, 0.714 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BREAK" type="TextureRect" parent="."]
margin_left = 180.0
margin_top = 150.0
margin_right = 369.0
margin_bottom = 339.0
rect_scale = Vector2( 0.79, 0.79 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOverLabel" type="Label" parent="."]
margin_left = -80.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 5
text = "Game Over"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Counter" type="Label" parent="."]
margin_left = -40.0
margin_top = -40.0
rect_scale = Vector2( 2, 2 )
size_flags_vertical = 5
text = "
"

[node name="FuelStaticLabel" type="Label" parent="."]
margin_left = 200.0
margin_top = -250.0
margin_right = 240.0
margin_bottom = -236.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
text = "Fuel:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FuelLabel" type="Label" parent="."]
margin_left = 280.0
margin_top = -250.0
margin_right = 320.0
margin_bottom = -236.0
rect_scale = Vector2( 2, 2 )
text = "100%"

[node name="HpStaticLabel" type="Label" parent="."]
margin_left = 200.0
margin_top = -200.0
margin_right = 246.0
margin_bottom = -186.0
rect_scale = Vector2( 2, 2 )
size_flags_horizontal = 3
text = "Health:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HpLabel" type="Label" parent="."]
margin_left = 300.0
margin_top = -200.0
margin_right = 340.0
margin_bottom = -186.0
rect_scale = Vector2( 2, 2 )
text = "100"
[connection signal="mouse_entered" from="GAS" to="." method="_on_GAS_mouse_entered"]
[connection signal="mouse_exited" from="GAS" to="." method="_on_GAS_mouse_exited"]
[connection signal="mouse_entered" from="BREAK" to="." method="_on_BREAK_mouse_entered"]
[connection signal="mouse_exited" from="BREAK" to="." method="_on_BREAK_mouse_exited"]
